--- a/style/styles.css
+++ b/style/styles.css
@@ -82,7 +82,11 @@ header {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 30vh;
+    height: 200px;
+}
+
+#partial_width_box {
+    width: 75%;
 }
 
 /* Log field */
