--- a/style/styles.css
+++ b/style/styles.css
@@ -104,3 +104,25 @@ header {
 #recordar_checkbox {
     box-shadow: 1px 1px 0 var(--foreground-2);
 }
+
+/*footer*/
+footer {
+    margin-top: 5px;
+    margin-left: 40px;
+    margin-right: 40px;
+    border: 3px solid var(--foreground-3);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+#left_footer {
+    margin-right: auto;
+    margin-left: 20px;
+    padding-left: 50px;
+}
+
+#center_footer {
+    margin-left: 25%;
+    margin-right: 30%;
+}
