--- a/style/styles.css
+++ b/style/styles.css
@@ -171,6 +171,64 @@ header {
     text-align: center;
 }
 
+#grid {
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+    width: 100%;
+}
+
+#grid_title {
+    justify-content: right;
+    height: 30px;
+    margin: 10px;
+}
+
+#container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 20px;
+}
+
+.title_container {
+    grid-column: 1 /-1;
+    width: 100%;
+    height: 20px;
+    padding: 5px;
+}
+
+.individual_container {
+    border: 3px solid var(--foreground-1);
+    border-radius: 10px;
+    margin: 10px;
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+.images_grid {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.right_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.show_more {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    height: 30px;
+}
+
 /* Log field */
 #aside_section {
     flex-direction: column;
