--- a/style/styles.css
+++ b/style/styles.css
@@ -119,6 +119,7 @@ header {
 
 .nav_button {
     padding: 2px;
+    margin: 20px;
 }
 
 .nav_button > span {
@@ -223,21 +224,20 @@ header {
 }
 
 .show_more {
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 100%;
+    padding: 10px;
+    width: 60%;
     height: 30px;
 }
 
 /* Log field */
 #aside_section {
     flex-direction: column;
-    min-width: 33%;
+    min-width: 34%;
     justify-content: flex-start;
 }
 
 #log_field {
-    margin-top: 50px;
+    margin-top: 5px;
     min-width: 95%;
 }
 
@@ -265,21 +265,24 @@ header {
 }
 
 #top_recommended {
-    margin: auto 50px;
-    min-width: 95%;
-    flex-direction: column; !important;
-    padding: 30px;
-}
-
-#top_recommended div {
     width: 100%;
+    flex-direction: column; !important;
 }
 
 #top_recommended div {
+    width: 70%;
     display: flex;
     flex-direction: column;
 }
 
+.recommended_titles {
+    font-size: 20px;
+    margin: 40px 0 10px 0;
+}
+
+#top_recommended div a {
+    margin: 6px 0;
+}
 
 /*** Footer ***/
 footer {
