--- a/style/styles.css
+++ b/style/styles.css
@@ -104,6 +104,10 @@ header {
     border-radius: 10px;
 }
 
+#main_heading h4 {
+    margin: 30px;
+}
+
 #images_carrousel {
     display: flex;
     flex-direction: row;
@@ -172,33 +176,26 @@ header {
     text-align: center;
 }
 
-#grid {
+#experiences_grid {
     display: flex;
     flex-direction: column;
     margin: 40px;
     width: 100%;
 }
 
-#grid_title {
+#experiences_grid_title {
     justify-content: right;
     height: 30px;
-    margin: 10px;
+    margin: 10px 10px 50px 10px;
 }
 
-#container {
+#experiences_container {
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 20px;
 }
 
-.title_container {
-    grid-column: 1 /-1;
-    width: 100%;
-    height: 20px;
-    padding: 5px;
-}
-
-.individual_container {
+.experience_shortcut {
     border: 3px solid var(--foreground-1);
     border-radius: 10px;
     margin: 10px;
@@ -208,6 +205,13 @@ header {
     grid-template-rows: 1fr 5fr;
 }
 
+.shortcut_title {
+    grid-column: 1 / -1;
+    width: 100%;
+    height: 20px;
+    padding: 5px;
+}
+
 .images_grid {
     width: 100%;
     height: 100%;
@@ -215,7 +219,7 @@ header {
     object-fit: cover;
 }
 
-.right_container {
+.right_nav_shortcut {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -298,12 +302,24 @@ footer {
 #left_footer {
     margin-right: auto;
     margin-left: 20px;
-    padding-left: 50px;
+    padding-left: 20px;
+    width: 190px;
 }
 
 #center_footer {
-    margin-left: 25%;
-    margin-right: 30%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+#newsletter_form {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 30px 0;
+}
+
+#newsletter_form label input {
+    margin: 0;
 }
 
 /* Pal media query
@@ -311,3 +327,19 @@ footer {
     font-size: 30px; !important;
 }
 */
+
+@media (max-width: 1024px) {
+
+    #main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #main_content {
+        width: 100%;
+    }
+
+    #aside_section {
+        width: 100%;
+    }
+}
