--- a/style/register.css
+++ b/style/register.css
@@ -69,8 +69,8 @@ header {
 #main {
     display: flex;
     flex-direction: column;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 20px;
     margin-bottom: 60 px;
     border: 3px solid var(--foreground-3);
@@ -80,9 +80,8 @@ header {
 #personal_data_grid {
     display: grid;
     grid-template-columns: auto auto;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-top: 10px;
     margin-bottom: 20px;
     width: 100%;
@@ -97,12 +96,30 @@ header {
 .data_box {
     height: 50px;
     width: 70%;
+    margin: 10px;
+    padding: 5px;
 }
 
-#personal_data_grid input {
+#birthday {
     width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
 }
 
+#login {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 10px;
+}
+
+.login_box {
+    height: 40px;
+    width: 100%;
+    padding: 5px;
+}
 
 /*** Footer ***/
 footer {
