--- a/style/register.css
+++ b/style/register.css
@@ -113,12 +113,39 @@ header {
     flex-direction: row;
     width: 100%;
     padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .login_box {
     height: 40px;
-    width: 100%;
     padding: 5px;
+}
+
+#checkbox {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#save_box {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    padding: 20px;
+}
+
+#confirm {
+    border: 3px solid var(--foreground-3);
+    border-radius: 10px;
+    margin-right: 40px;
+    width: 40%;
+}
+
+#font_box {
+    color: var(--foreground-3);
+    text-decoration: none;
 }
 
 /*** Footer ***/
@@ -141,8 +168,6 @@ footer {
 
 #center_footer {
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
 }
 
 #newsletter_form {
