--- a/style/styles.css
+++ b/style/styles.css
@@ -182,13 +182,24 @@ header {
     width: 100%;
 }
 
+#title_name {
+    margin: 0 auto 0 30px;
+}
+
+#title_price {
+    margin-right: 30px;
+}
+
 #experiences_description {
     margin-right: auto;
     margin-left: 30px;
     margin-top: 20px;
+    width: 80%;
     display: flex;
-    justify-content: center;
+    padding: 20px;
+    justify-content: left;
     align-items: center;
+    font-size: 20px;
 }
 
 
@@ -210,7 +221,9 @@ header {
 #experiences_grid_title {
     justify-content: right;
     height: 30px;
-    margin: 10px 10px 50px 10px;
+    margin: 10px 10px 15px 10px;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 #experiences_container {
@@ -386,15 +399,61 @@ footer {
     #experiences_title {
         flex-direction: column;
         justify-content: left;
-        min-height: 15vh;
+        padding: 10px;
     }
 
     #experiences_title > div {
         margin: 2px auto 2px 2px; !important;
     }
 
+    #title_name {
+        font-size: 18px !important;
+    }
+
+    #title_price {
+        font-size: 16px !important;
+    }
+
+    #experiences_description {
+        font-size: 16px !important;
+        margin: 2px;
+    }
+
     .nav_button > span {
         font-size: 1px; !important;
+    }
+
+    #eperiences_grid {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #experiences_grid_title {
+        margin: 50px 0;
+    }
+
+    #experiences_container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .material-icons {
+        font-size: 20px !important;
+    }
+
+    .show_more {
+        font-size: 15px !important;
+        width: 30%;
+    }
+
+    .shortcut_title {
+        padding: 5px 10px;
+        margin: 2px;
+        font-weight: bold;
+    }
+
+    .right_nav_shortcut {
+        padding: 2px;
     }
 }
 
