--- a/style/styles.css
+++ b/style/styles.css
@@ -347,6 +347,7 @@ header {
 #grid_checkboxes {
     width: 100%;
     padding-left: 20px;
+    margin-bottom: 10px;
     display: grid;
     grid-template-columns: auto auto;
 
@@ -363,6 +364,75 @@ header {
     width: 30px;
     height: 30px;
     margin-right: 10px;
+}
+
+#search {
+    width: max-content;
+    display: flex;
+    align-items: center;
+    padding: 14px;
+    border-radius: 28px;
+    background: #f6f6f6;
+    margin-bottom: 15px;
+}
+
+
+#search_input {
+    margin-left: 14px;
+    border: none;
+    background: transparent;
+    width: 250px;
+}
+
+#search_input::placeholder, 
+#search_icon {
+    color: rgba(0, 0, 0, 0.25);
+}
+
+#advice_title {
+    padding-left: 30px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#advice_box {
+    height: 100%;
+    border: 2px solid var(--foreground-3);
+    width: 250px;
+}
+
+#advice_send {
+    padding-left: 30px;
+    padding-right: 10px;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#content_box {
+    height: 100%;
+    width: 450px;
+    border: 2px solid var(--foreground-3);
+    margin-right: auto;
+}
+
+#send_button {
+    height: 100%;
+    width: 100px;
+    margin-right: auto;
+}
+
+#calendar {
+    padding: 10px;
+}
+
+#calendar_image {
+    height: 400px;
+    width: 400px;
 }
 
 /*** Footer ***/
@@ -400,7 +470,9 @@ footer {
 }
 
 /* Pal media query
-
+.nav_button > span {
+    font-size: 30px; !important;
+}
 */
 
 @media (max-width: 1024px) {
