Añadido el input file para la página de registro

--- a/style/register.css
+++ b/style/register.css
@@ -148,6 +148,11 @@ header {
     text-decoration: none;
 }
 
+#upload_image {
+    width: 100%;
+    padding: 10px;
+}
+
 /*** Footer ***/
 footer {
     margin-top: 5px;
