--- a/style/styles.css
+++ b/style/styles.css
@@ -41,6 +41,10 @@ a:active {
     text-decoration: none;
 }
 
+input {
+    outline: none;
+}
+
 /*** Global classes ***/
 .align_all_items_center {
     display: flex;
@@ -64,6 +68,26 @@ a:active {
     background: var(--background-1);
     text-align: left;
     display: inline-block;
+}
+
+.input_field::placeholder,
+.input_icon {
+    color: rgba(0, 0, 0, 0.65);
+}
+
+.input_field {
+    border: none;
+    background: transparent;
+}
+
+.input_section {
+    width: max-content;
+    display: flex;
+    align-items: center;
+    border-radius: 28px;
+    border: 3px solid var(--foreground-3);
+    background: var(--background-2);
+    color: var(--foreground-1);
 }
 
 /*** Header ***/
@@ -169,7 +193,6 @@ header {
 }
 
 #scroll_experiences div {
-    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -180,14 +203,19 @@ header {
     flex-direction: row;
     margin-top: 20px;
     width: 100%;
+    height: 100px;
 }
 
 #title_name {
     margin: 0 auto 0 30px;
+    font-size: 22px;
+    padding: 10px 20px;
 }
 
 #title_price {
-    margin-right: 30px;
+    margin: 0 30px 0 auto;
+    padding: 8px 12px;
+    font-size: 20px;
 }
 
 #experiences_description {
@@ -199,12 +227,13 @@ header {
     padding: 20px;
     justify-content: left;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 
-
 #buy_button {
-    margin: auto 40px 30px auto;
+    margin: 30px 40px 30px auto;
+    font-size: 18px;
+    padding: 6px 10px;
 }
 
 #buy_button p {
@@ -212,16 +241,14 @@ header {
 }
 
 #experiences_grid {
-    display: flex;
-    flex-direction: column;
     margin: 40px;
     width: 100%;
+    flex-direction: column;
 }
 
 #experiences_grid_title {
-    justify-content: right;
-    height: 30px;
-    margin: 10px 10px 15px 10px;
+    justify-content: left;
+    margin: 10px auto 15px 10px;
     font-weight: bold;
     font-size: 30px;
 }
@@ -229,12 +256,9 @@ header {
 #experiences_container {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 20px;
 }
 
 .experience_shortcut {
-    border: 3px solid var(--foreground-1);
-    border-radius: 10px;
     margin: 10px;
     padding: 5px;
     display: grid;
@@ -291,6 +315,7 @@ header {
     margin: 0.8vw 1.8vw 0.8vw 1.8vw;
     height: 50px;
     min-width: 100%;
+    padding-left: 30px;
 }
 
 #recordar_checkbox {
@@ -299,10 +324,31 @@ header {
     margin-right: 20px;
 }
 
-.submit_user {
-    margin: 20px 0;
+#log_button {
+    margin: 20px auto;
     height: 50px;
-    width: 50%;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#log_button > input {
+    background: none;
+    border: none;
+    font-size: 16px;
+}
+
+#register_button {
+    width: 40%;
+    height: 50px;
+    margin: 20px auto;
+}
+
+#register_button > a {
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
 }
 
 #top_recommended {
@@ -367,26 +413,8 @@ header {
 }
 
 #search {
-    width: max-content;
-    display: flex;
-    align-items: center;
     padding: 14px;
-    border-radius: 28px;
-    background: #f6f6f6;
     margin-bottom: 15px;
-}
-
-
-#search_input {
-    margin-left: 14px;
-    border: none;
-    background: transparent;
-    width: 250px;
-}
-
-#search_input::placeholder, 
-#search_icon {
-    color: rgba(0, 0, 0, 0.25);
 }
 
 #advice_title {
@@ -394,16 +422,15 @@ header {
     height: 40px;
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin: 0 0 10px 30px;
 }
 
 #advice_box {
     height: 100%;
-    border: 2px solid var(--foreground-3);
     width: 250px;
 }
 
-#advice_send {
+#advice_section {
     padding-left: 30px;
     padding-right: 10px;
     height: 40px;
@@ -413,17 +440,22 @@ header {
     margin-bottom: 20px;
 }
 
+#advice_field {
+    height: 40px;
+    padding-left: 30px;
+    margin-right: 10px;
+    width: 70%;
+}
+
 #content_box {
     height: 100%;
-    width: 450px;
-    border: 2px solid var(--foreground-3);
     margin-right: auto;
 }
 
 #send_button {
     height: 100%;
     width: 100px;
-    margin-right: auto;
+    margin: 0 10px 0 auto;
 }
 
 #calendar {
@@ -531,22 +563,38 @@ footer {
         margin: 2px;
     }
 
+    #buy_button {
+        margin: 10px auto;
+    }
+
+    #buy_button p {
+        height: 30px;
+        align-content: center;
+        justify-content: center;
+    }
+
     .nav_button > span {
         font-size: 1px; !important;
     }
 
-    #eperiences_grid {
+    #experiences_grid {
         display: flex;
         flex-direction: column;
     }
 
     #experiences_grid_title {
-        margin: 50px 0;
+        margin: 10px 0 25px 0;
     }
 
     #experiences_container {
         display: flex;
         flex-direction: column;
+        width: 100%;
+    }
+
+    .experience_shortcut {
+        width: 90%;
+        margin: 10px auto;
     }
 
     .material-icons {
@@ -558,14 +606,23 @@ footer {
         width: 30%;
     }
 
-    .shortcut_title {
-        padding: 5px 10px;
-        margin: 2px;
-        font-weight: bold;
-    }
 
     .right_nav_shortcut {
         padding: 2px;
+    }
+
+    #advice_section {
+        flex-direction: column;
+        height: auto;
+    }
+
+    #advice_field {
+        margin: 0 auto 0 0;
+    }
+
+    #send_button {
+        margin: 10px auto 0 0;
+        height: 30px;
     }
 }
 
