--- a/style/buy.css
+++ b/style/buy.css
@@ -203,17 +203,20 @@ header {
     padding-right: 10px;
 }
 
+#card_type {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
 #select_box {
     height: 30px;
-    margin-bottom: 10px;
-    width: 25%;
+    width: 100%;
 }
 
 #cvv_exp_grid {
     display: grid;
     grid-template-columns: auto auto;
-    width: 50%;
-    margin-right: auto;
 }
 
 #expiration_date {
@@ -234,6 +237,32 @@ header {
     border-radius: 10px;
     padding-left: 10px;
     width: 25%;
+}
+
+#cancel_buy {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
+#buy_box {
+    border: 3px solid var(--foreground-3);
+    height: 40px;
+    width: 150px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#cancel_box {
+    border: 3px solid var(--foreground-3);
+    height: 40px;
+    width: 150px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /*** Footer ***/
