--- a/style/styles.css
+++ b/style/styles.css
@@ -95,6 +95,7 @@ header {
     margin: 20px;
     border: 3px solid var(--foreground-3);
     padding: 20px;
+    border-radius: 10px;
 }
 
 #site_title {
@@ -297,8 +298,14 @@ header {
 /* Log field and aside section */
 #aside_section {
     flex-direction: column;
-    min-width: 34%;
+    width: 34%;
     justify-content: flex-start;
+    margin: 10px;
+    padding: 10px;
+}
+
+#aside_section > h2 {
+    margin: 30px auto 10px 30px;
 }
 
 #log_field {
@@ -333,7 +340,7 @@ header {
     justify-content: center;
 }
 
-#log_button > input {
+#log_button > a {
     background: none;
     border: none;
     font-size: 16px;
@@ -463,8 +470,7 @@ header {
 }
 
 #calendar_image {
-    height: 400px;
-    width: 400px;
+    width: 90%;
 }
 
 /*** Footer ***/
@@ -491,6 +497,14 @@ footer {
     flex-direction: column;
 }
 
+#footer_shortcuts {
+    flex-direction: row;
+}
+
+#footer_shortcuts > p {
+    margin: 20px 10px;
+}
+
 #newsletter_form {
     display: flex;
     flex-direction: row;
@@ -499,6 +513,10 @@ footer {
 
 #newsletter_form label input {
     margin: 0;
+}
+
+#social_media {
+    margin: 10px 10px 10px auto;
 }
 
 /* Pal media query
@@ -618,6 +636,36 @@ footer {
         margin: 10px auto 0 0;
         height: 30px;
     }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #center_footer {
+        flex-direction: column;
+        width: 60%;
+    }
+
+    #footer_shortcuts {
+        flex-direction: column;
+    }
+
+    #footer_shortcuts > p {
+        justify-content: center;
+        align-items: center;
+        margin: 10px auto;
+    }
+
+    #newsletter_form {
+        flex-direction: column;
+    }
+
+    #social_media {
+        margin: 10px auto;
+    }
+
 }
 
 @media (min-width: 1920px) {
