--- a/style/register.css
+++ b/style/register.css
@@ -40,6 +40,7 @@ header {
     margin: 20px;
     border: 3px solid var(--foreground-3);
     padding: 20px;
+    border-radius: 10px;
 }
 
 #site_title {
@@ -69,43 +70,44 @@ header {
 #main {
     display: flex;
     flex-direction: column;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 20px;
-    margin-bottom: 60 px;
+    margin: 20px 30% 60px;
     border: 3px solid var(--foreground-3);
     border-radius: 10px;
 }
 
 #personal_data_grid {
     display: grid;
-    grid-template-columns: auto auto;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-end: 3;
+    grid-row-end: 2;
     width: 100%;
 }
 
-.data_grid_box {
-    height: 20px;
-    width: 20%;
-    border-radius: 10px;
+
+#personal_data_grid > :last-child {
+    grid-column: 1 / -1;
+    justify-self: center;
+    width: 100%;
 }
+
 
 .data_box {
     height: 50px;
-    width: 70%;
-    margin: 10px;
+    margin: 10px auto;
     padding: 5px;
+    width: 80%;
 }
 
-#birthday {
-    width: 100%;
-    padding: 10px;
+#campo_nacimiento {
     display: flex;
-    flex-direction: column;
-    align-items: left;
+    flex-direction: row;
+    margin: 20px auto;
+}
+
+#campo_nacimiento > label {
+    margin-right: 20px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 #login {
@@ -120,6 +122,7 @@ header {
 .login_box {
     height: 40px;
     padding: 5px;
+    width: 100%;
 }
 
 #checkbox {
@@ -131,7 +134,6 @@ header {
     width: 100%;
     height: 50px;
     display: flex;
-    align-items: right;
     justify-content: right;
     padding: 20px;
 }
@@ -173,6 +175,16 @@ footer {
 
 #center_footer {
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+#footer_shortcuts {
+    flex-direction: row;
+}
+
+#footer_shortcuts > p {
+    margin: 20px 10px;
 }
 
 #newsletter_form {
@@ -183,4 +195,83 @@ footer {
 
 #newsletter_form label input {
     margin: 0;
+}
+
+#social_media {
+    margin: 10px 10px 10px auto;
+}
+
+@media (max-width: 1024px) {
+
+    header {
+        flex-direction: column;
+        margin: 10vw
+    }
+
+    header > div {
+        margin: 10px auto 10px 0;
+    !important;
+    }
+
+    #logo {
+        margin: 20px auto 20px 5px;
+    }
+
+    #site_shortcuts {
+        flex-direction: column;
+    }
+
+
+    #main {
+        width: 90%;
+        margin: auto;
+    }
+
+    #main > h1 {
+        font-size: 8vw; !important;
+        margin-left: 10px;
+    }
+
+    #personal_data_grid {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #campo_nacimiento {
+        width: 80%;
+        flex-direction: column;
+    }
+
+    #login {
+        flex-direction: column;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #center_footer {
+        flex-direction: column;
+        width: 60%;
+    }
+
+    #footer_shortcuts {
+        flex-direction: column;
+    }
+
+    #footer_shortcuts > p {
+        justify-content: center;
+        align-items: center;
+        margin: 10px auto;
+    }
+
+    #newsletter_form {
+        flex-direction: column;
+    }
+
+    #social_media {
+        margin: 10px auto;
+    }
 }
