--- a/style/buy.css
+++ b/style/buy.css
@@ -1,15 +1,17 @@
 :root {
     --font: Fira Sans;
     --foreground-1: rgb(0, 0, 0); /* Text */
-    --foreground-2: rgb(0, 0, 0); /* Elements */
-    --foreground-3: rgb(0, 0, 0); /* Borders */
+    --foreground-2: rgb(32, 234, 160); /* Elements */
+    --foreground-3: rgb(11, 121, 90); /* Borders */
     --background-1: rgb(255, 255, 255);
-    --background-2: lightgray;
+    --background-2: #e3e3e3;
+    --background-3: rgba(255, 255, 255, 0.75);
 }
 
-html, body {
+html{
     font-family: var(--font), sans-serif;
     color: var(--foreground-1);
+    background-image: url("../images/background.webp");
 }
 
 label {
@@ -64,6 +66,7 @@ a:active {
     background: var(--background-1);
     text-align: left;
     display: inline-block;
+    background: var(--background-3);
 }
 
 .input_field::placeholder,
@@ -92,6 +95,7 @@ header {
     border: 3px solid var(--foreground-3);
     padding: 20px;
     border-radius: 10px;
+    background: var(--background-3);
 }
 
 #site_title {
@@ -136,6 +140,8 @@ header {
     margin-right: auto;
     width: 30%;
     padding: 20px;
+    background: var(--background-3);
+
 }
 
 #scroll_experiences {
@@ -192,7 +198,6 @@ header {
 }
 
 #description_detailed {
-    border: 3px solid var(--foreground-3);
     padding: 10px;
     border-radius: 10px;
 }
@@ -205,6 +210,7 @@ header {
     flex-direction: column;
     margin-left: auto;
     width: 63%;
+    background: var(--background-3);
 }
 
 .boxes_main {
@@ -287,6 +293,7 @@ footer {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
+    background: var(--background-3);
 }
 
 #left_footer {
@@ -324,7 +331,12 @@ footer {
     margin: 10px 10px 10px auto;
 }
 
-@media (max-width: 1024px) {
+
+@media (max-width: 600px) {
+
+}
+
+@media (max-width: 768px) {
 
     header {
         flex-direction: column;
@@ -359,9 +371,9 @@ footer {
     }
 
     #main_block {
-        width: 70%;
         margin: 10px;
         padding: 5px;
+        width: 90%;
     }
 
     #experiences_title {
@@ -379,10 +391,6 @@ footer {
         height: auto;
         padding: 5px;
         margin: 40px auto;
-    }
-
-    #main_block {
-        width: 90%;
     }
 
     .boxes_main {
