--- a/style/register.css
+++ b/style/register.css
@@ -1,10 +1,17 @@
 :root {
     --font: Fira Sans;
     --foreground-1: rgb(0, 0, 0); /* Text */
-    --foreground-2: rgb(0, 0, 0); /* Elements */
-    --foreground-3: rgb(0, 0, 0); /* Borders */
+    --foreground-2: rgb(32, 234, 160); /* Elements */
+    --foreground-3: rgb(11, 121, 90); /* Borders */
     --background-1: rgb(255, 255, 255);
-    --background-2: lightgray;
+    --background-2: #e3e3e3;
+    --background-3: rgba(255, 255, 255, 0.75);
+}
+
+html{
+    font-family: var(--font), sans-serif;
+    color: var(--foreground-1);
+    background-image: url("../images/background.webp");
 }
 
 html, body {
@@ -65,6 +72,7 @@ header {
     border: 3px solid var(--foreground-3);
     padding: 20px;
     border-radius: 10px;
+    background: var(--background-3);
 }
 
 #site_title {
@@ -102,6 +110,7 @@ header {
     margin: 20px 30% 60px;
     border: 3px solid var(--foreground-3);
     border-radius: 10px;
+    background: var(--background-3);
 }
 
 #personal_data_grid {
@@ -193,6 +202,7 @@ footer {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
+    background: var(--background-3);
 }
 
 #left_footer {
@@ -230,7 +240,11 @@ footer {
     margin: 10px 10px 10px auto;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 600px) {
+
+}
+
+@media (max-width: 768px) {
 
     header {
         flex-direction: column;
@@ -238,8 +252,7 @@ footer {
     }
 
     header > div {
-        margin: 10px auto 10px 0;
-    !important;
+        margin: 10px auto 10px 0; !important;
     }
 
     #logo {
